<resources>
    <string name="app_name">InfrastructureComplaintsAdmin</string>
    <string name="radio_admin">Admin</string>
    <string name="radio_dept">Department</string>
    <string name="button_login">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="button_approve">Approve</string>
    <string name="button_reject">Reject</string>
    <string name="text_status_heading">Status</string>
    <string name="text_subject">Subject</string>
    <string name="text_description">Description</string>
    <string name="text_user">User</string>
    <string name="text_lodged_user">Lodged By User</string>
    <string name="button_delete">Delete</string>
    <string name="button_image">View Image</string>
    <string name="button_updateStatus">Update Status</string>
    <string name="text_resolved">Update Resolved Complaint and New Image</string>
    <string name="button_upload">Upload</string>
    <string name="button_update">Update</string>
    <string name="text_block_user">Enter User Mail Id</string>
    <string name="button_block">Block</string>
    <string name="button_unblock">Unblock</string>
    <string name="text_name_cd">Name</string>
    <string name="text_email_cd">Email</string>
    <string name="text_contact_cd">Contact No</string>
    <string name="text_password_cd">Password</string>
    <string name="button_create_dept">Create</string>
    <string name="text_name_d_heading">Name</string>
    <string name="text_email_d_heading">Email</string>
    <string name="text_contact_d_heading">Contact No</string>
    <string name="button_delete_d">Delete Department</string>
    <string name="text_select_priority">Select Priority</string>
    <string name="text_select_department">Select Department</string>
    <string name="button_approve_db">Approve</string>


</resources>
